--- a/egress/squid.conf
+++ b/egress/squid.conf
@@ -14,7 +14,7 @@ acl certificate_revocation_list_regex url_regex ^http://crl\.microsoft\.com/pki/
 acl certificate_revocation_list_regex url_regex ^http://crl3\.digicert\.com/DigiCertTrusted.+\.crl$
 acl certificate_revocation_list_regex url_regex ^http://oscp\.digicert\.com/[A-Za-z0-9%]+$
 
-acl allowed_domains dstdomain "/etc/squid/lists.d"
+acl allowed_domains dstdomain "/etc/squid/domain-lists.d"
 
 acl Safe_ports port 80          # http
 acl Safe_ports port 443         # https
