feat: Externalize CRL regexes
- Created a new directory egress/crl-lists.d.
- Moved CRL regexes from egress/squid.conf to egress/crl-lists.d/dev-crl-regex.txt.
- Updated egress/squid.conf to read CRL regexes from all files in egress/crl-lists.d.
- Updated docker-compose.yml to mount the new egress/crl-lists.d directory.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,7 @@ services:
         volumes:
             - ./egress/squid.conf:/etc/squid/squid.conf:ro
             - ./egress/domain-lists.d:/etc/squid/domain-lists.d:ro
+            - ./egress/crl-lists.d:/etc/squid/crl-lists.d:ro
             - ./egress/tester.sh:/usr/local/bin/tester.sh:ro
 
     app:
