--- a/egress/squid.conf
+++ b/egress/squid.conf
@@ -9,10 +9,7 @@ acl localnet src 10.0.0.0/8
 acl localnet src 192.168.0.0/16
 
 # Allow access to Microsoft PKI CRL files
-acl certificate_revocation_list_regex url_regex ^http://www\.microsoft\.com/pkiops/crl/.*\.crl$
-acl certificate_revocation_list_regex url_regex ^http://crl\.microsoft\.com/pki/crl/products/[^/]+\.crl$
-acl certificate_revocation_list_regex url_regex ^http://crl3\.digicert\.com/DigiCertTrusted.+\.crl$
-acl certificate_revocation_list_regex url_regex ^http://oscp\.digicert\.com/[A-Za-z0-9%]+$
+acl certificate_revocation_list_regex url_regex "/etc/squid/crl-lists.d"
 
 acl allowed_domains dstdomain "/etc/squid/domain-lists.d"
 
