--- a/egress/squid.conf
+++ b/egress/squid.conf
@@ -2,6 +2,7 @@ http_port 3128
 
 # Don't cache
 cache deny all
+refresh_pattern \.crl$ 30 100% 30 override-expire ignore-no-cache
 
 # Define local network (containers)
 acl localnet src 172.16.0.0/12
