--- a/egress/squid.conf
+++ b/egress/squid.conf
@@ -17,6 +17,8 @@ acl allowed_domains dstdomain "/etc/squid/domain-lists.d"
 acl Safe_ports port 80          # http
 acl Safe_ports port 443         # https
 
+acl HTTPS_ports port 443
+
 acl CONNECT method CONNECT
 
 # Access rules
@@ -25,7 +27,7 @@ http_access deny !Safe_ports
 
 # Allow access to specified domains
 http_access allow localnet certificate_revocation_list_regex
-http_access allow localnet allowed_domains
+http_access allow localnet allowed_domains HTTPS_ports
 
 # Deny everything else
 http_access deny all
