debug: Temporarily removed HTTPS_ports from allowed_domains http_access rule

--- a/egress/squid.conf
+++ b/egress/squid.conf
@@ -27,7 +27,7 @@ http_access deny !Safe_ports
 
 # Allow access to specified domains
 http_access allow localnet certificate_revocation_list_regex
-http_access allow localnet allowed_domains HTTPS_ports
+http_access allow localnet allowed_domains
 
 # Deny everything else
 http_access deny all
