--- a/egress/squid.conf
+++ b/egress/squid.conf
@@ -10,9 +10,9 @@ acl localnet src 10.0.0.0/8
 acl localnet src 192.168.0.0/16
 
 # Allow access to Microsoft PKI CRL files
-acl certificate_revocation_list_regex url_regex "/etc/squid/crl-lists.d"
+# acl certificate_revocation_list_regex url_regex "/etc/squid/crl-lists.d"
 
-acl allowed_domains dstdomain "/etc/squid/domain-lists.d"
+# acl allowed_domains dstdomain "/etc/squid/domain-lists.d"
 
 acl Safe_ports port 80          # http
 acl Safe_ports port 443         # https
@@ -26,8 +26,9 @@ acl CONNECT method CONNECT
 http_access deny !Safe_ports
 
 # Allow access to specified domains
-http_access allow localnet certificate_revocation_list_regex
-http_access allow localnet allowed_domains
+# http_access allow localnet certificate_revocation_list_regex
+# http_access allow localnet allowed_domains
+http_access allow localnet
 
 # Deny everything else
 http_access deny all
