debug: Temporarily set squid.conf to allow all traffic

--- a/egress/squid.conf
+++ b/egress/squid.conf
@@ -1,37 +1,2 @@
 http_port 3128
-
-# Don't cache
-cache deny all
-refresh_pattern \.crl$ 30 100% 30 override-expire ignore-no-cache
-
-# Define local network (containers)
-acl localnet src 172.16.0.0/12
-acl localnet src 10.0.0.0/8
-acl localnet src 192.168.0.0/16
-
-# Allow access to Microsoft PKI CRL files
-# acl certificate_revocation_list_regex url_regex "/etc/squid/crl-lists.d"
-
-# acl allowed_domains dstdomain "/etc/squid/domain-lists.d"
-
-acl Safe_ports port 80          # http
-acl Safe_ports port 443         # https
-
-acl HTTPS_ports port 443
-
-acl CONNECT method CONNECT
-
-# Access rules
-# Deny requests to certain unsafe ports
-http_access deny !Safe_ports
-
-# Allow access to specified domains
-# http_access allow localnet certificate_revocation_list_regex
-# http_access allow localnet allowed_domains
-http_access allow localnet
-
-# Deny everything else
-http_access deny all
-
-# Default user (adjust based on your system)
-cache_effective_user squid
+http_access allow all
