fix: Added IPv6 localhost to localnet ACL in squid.conf

--- a/egress/squid.conf
+++ b/egress/squid.conf
@@ -8,6 +8,7 @@ refresh_pattern \.crl$ 30 100% 30 override-expire ignore-no-cache
 acl localnet src 172.16.0.0/12
 acl localnet src 10.0.0.0/8
 acl localnet src 192.168.0.0/16
+acl localnet src ::1
 
 # Allow access to Microsoft PKI CRL files
 acl certificate_revocation_list_regex url_regex "/etc/squid/crl-lists.d"
