--- a/egress/squid.conf
+++ b/egress/squid.conf
@@ -13,7 +13,7 @@ acl localnet src ::1
 # Allow access to Microsoft PKI CRL files
 acl certificate_revocation_list_regex url_regex "/etc/squid/crl-lists.d"
 
-acl allowed_domains dstdomain "/etc/squid/domain-lists.d"
+acl allowed_domains dstdomain "/etc/squid/all-allowed-domains.txt"
 
 acl Safe_ports port 80          # http
 acl Safe_ports port 443         # https
