--- a/egress/squid.conf
+++ b/egress/squid.conf
@@ -8,12 +8,11 @@ refresh_pattern \.crl$ 30 100% 30 override-expire ignore-no-cache
 acl localnet src 172.16.0.0/12
 acl localnet src 10.0.0.0/8
 acl localnet src 192.168.0.0/16
-acl localnet src ::1
 
 # Allow access to Microsoft PKI CRL files
 acl certificate_revocation_list_regex url_regex "/etc/squid/crl-lists.d"
 
-acl allowed_domains dstdomain "/etc/squid/all-allowed-domains.txt"
+acl allowed_domains dstdomain "/etc/squid/domain-lists.d"
 
 acl Safe_ports port 80          # http
 acl Safe_ports port 443         # https
