feat: Updated egress Dockerfile, entrypoint.sh, and squid.conf for dynamic CRL and domain list loading and syntax check.

--- a/egress/Dockerfile
+++ b/egress/Dockerfile
@@ -15,6 +15,16 @@ RUN squid -z
 
 EXPOSE 3128
 
+COPY crl-lists.d/ /etc/squid/crl-lists.d/
+
+# Concatenate all CRL regex files into a single file for Squid
+RUN cat /etc/squid/crl-lists.d/*.txt > /etc/squid/crl-regex.txt
+
+COPY domain-lists.d/ /etc/squid/domain-lists.d/
+
+# Concatenate all allowed domain files into a single file for Squid
+RUN cat /etc/squid/domain-lists.d/*.txt > /etc/squid/all-allowed-domains.txt
+
 COPY entrypoint.sh /entrypoint.sh
 
 RUN chmod +x /entrypoint.sh
