--- a/egress/squid.conf
+++ b/egress/squid.conf
@@ -2,7 +2,7 @@ http_port 3128
 
 # Don't cache
 cache deny all
-refresh_pattern \.crl$ 30 100% 30 override-expire ignore-no-cache
+refresh_pattern \.crl$ 30 100% 30
 
 # Define local network (containers)
 acl localnet src 172.16.0.0/12
@@ -11,7 +11,7 @@ acl localnet src 192.168.0.0/16
 acl localnet src ::1
 
 # Allow access to Microsoft PKI CRL files
-acl certificate_revocation_list_regex url_regex "/etc/squid/crl-lists.d"
+acl certificate_revocation_list_regex url_regex "/etc/squid/crl-regex.txt"
 
 acl allowed_domains dstdomain "/etc/squid/all-allowed-domains.txt"
 
