fix: Corrected Squid caching logic for CRLs

--- a/egress/squid.conf
+++ b/egress/squid.conf
@@ -1,8 +1,10 @@
 http_port 3128
 
-# Don't cache
-cache deny all
+# Allow caching for CRLs
+cache allow certificate_revocation_list_regex
 refresh_pattern \.crl$ 30 100% 30
+# Deny caching for everything else
+cache deny all
 
 # Define local network (containers)
 acl localnet src 172.16.0.0/12
