fix: Applied specific refresh_pattern rules for each CRL regex

--- a/egress/squid.conf
+++ b/egress/squid.conf
@@ -20,7 +20,10 @@ acl CONNECT method CONNECT
 
 # Allow caching for CRLs
 cache allow certificate_revocation_list_regex
-refresh_pattern \.crl$ 0.5 100% 30
+refresh_pattern ^http://www\.microsoft\.com/pkiops/crl/.*\.crl$ 0.5 100% 30
+refresh_pattern ^http://crl\.microsoft\.com/pki/crl/products/[^/]+\.crl$ 0.5 100% 30
+refresh_pattern ^http://crl3\.digicert\.com/DigiCertTrusted.+\.crl$ 0.5 100% 30
+refresh_pattern ^http://oscp\.digicert\.com/[A-Za-z0-9%]+$ 0.5 100% 30
 
 # Deny caching for everything else
 cache deny all
