--- a/egress/squid.conf
+++ b/egress/squid.conf
@@ -1,37 +1,38 @@
 http_port 3128
 
-# Don't cache
-cache deny all
-
 # Define local network (containers)
 acl localnet src 172.16.0.0/12
 acl localnet src 10.0.0.0/8
 acl localnet src 192.168.0.0/16
+acl localnet src ::1
 
 # Allow access to Microsoft PKI CRL files
-acl certificate_revocation_list_regex url_regex ^http://www\.microsoft\.com/pkiops/crl/.*\.crl$
-acl certificate_revocation_list_regex url_regex ^http://crl\.microsoft\.com/pki/crl/products/[^/]+\.crl$
-acl certificate_revocation_list_regex url_regex ^http://crl3\.digicert\.com/DigiCertTrusted.+\.crl$
-acl certificate_revocation_list_regex url_regex ^http://oscp\.digicert\.com/[A-Za-z0-9%]+$
+acl certificate_revocation_list_regex url_regex "/etc/squid/crl-regex.txt"
 
-acl allowed_domains dstdomain "/etc/squid/allowed-domains.txt"
+acl allowed_domains dstdomain "/etc/squid/all-allowed-domains.txt"
 
-acl SSL_ports port 443
 acl Safe_ports port 80          # http
 acl Safe_ports port 443         # https
 
+acl HTTPS_ports port 443
+
 acl CONNECT method CONNECT
 
+# Allow caching for CRLs
+cache allow certificate_revocation_list_regex
+
+
+# Deny caching for everything else
+cache deny all
+
 # Access rules
+
 # Deny requests to certain unsafe ports
 http_access deny !Safe_ports
 
-# Deny CONNECT to other than secure SSL ports
-http_access deny CONNECT !SSL_ports
-
 # Allow access to specified domains
 http_access allow localnet certificate_revocation_list_regex
-http_access allow localnet allowed_domains
+http_access allow localnet allowed_domains HTTPS_ports
 
 # Deny everything else
 http_access deny all
