--- a/egress/Dockerfile
+++ b/egress/Dockerfile
@@ -4,7 +4,8 @@ RUN apk add --no-cache \
 	bash \
     ca-certificates \
     squid \
-    curl
+    curl \
+    inotify-tools
 
 # Create squid user and directories
 RUN mkdir -p /var/cache/squid /var/log/squid && \
