feat(egress): Add file watcher to entrypoint.sh and update Dockerfile (#2)
* agents.md

* feat(egress): Add file watcher to entrypoint.sh and update Dockerfile

This commit introduces a file watching mechanism to the egress container's entrypoint script. It monitors changes in CRL and domain list .txt files, automatically re-consolidates them, and reconfigures Squid.

- Updated egress/Dockerfile to include inotify-tools.
- Modified egress/entrypoint.sh to:
  - Encapsulate file consolidation logic into a function.
  - Implement a background inotifywait loop to detect changes.
  - Re-consolidate files and reconfigure Squid upon detecting changes.
  - Addressed shellcheck warnings by adding -r to read and explicitly using the path variable.

--- a/egress/Dockerfile
+++ b/egress/Dockerfile
@@ -4,7 +4,8 @@ RUN apk add --no-cache \
 	bash \
     ca-certificates \
     squid \
-    curl
+    curl \
+    inotify-tools
 
 # Create squid user and directories
 RUN mkdir -p /var/cache/squid /var/log/squid && \
@@ -14,12 +15,6 @@ RUN mkdir -p /var/cache/squid /var/log/squid && \
 RUN squid -z
 
 EXPOSE 3128
-
-COPY crl-lists.d/ /etc/squid/crl-lists.d/
-
-
-COPY domain-lists.d/ /etc/squid/domain-lists.d/
-
 
 COPY entrypoint.sh /entrypoint.sh
 
