--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -24,6 +24,8 @@ services:
               target: 80
         networks:
             - ingress-net
+        depends_on:
+            - app
         deploy:
             resources:
                 limits:
@@ -42,12 +44,9 @@ services:
             - internet
         volumes:
             - ./egress/squid.conf:/etc/squid/squid.conf:ro
-            - ./egress/allowed-domains.txt:/etc/squid/allowed-domains.txt:ro
+            - ./egress/domain-lists.d:/etc/squid/domain-lists.d:ro
+            - ./egress/crl-lists.d:/etc/squid/crl-lists.d:ro
+            - ./egress/tester.sh:/usr/local/bin/tester.sh:ro
 
     app:
         image: mandraketech.internal/secure-dev
-        environment:
-            <<: *proxy-env
-        networks:
-            - ingress-net
-            - egress-net
