--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
         environment:
             DB_HOST: database
             DB_PORT: 5432
-            <<: [*db-creds, *proxy-env]
+            <<: *db-creds
         volumes:
             - code_m2:/home/dev/.m2
             - code_vol:/code
@@ -40,8 +40,6 @@ services:
             # - ~/.ssh/id_ed25519.pub:/home/dev/host/ssh_key_public:ro
         networks:
             - db-net
-            - ingress-net
-            - egress-net
         depends_on:
             - database
 
