--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -3,15 +3,15 @@ networks:
         internal: true
 
 x-pgsql-creds: &db-creds
-    DB_USER: psqladmin
-    DB_PASSWORD: secret
-    DB_DATABASE: admin
+    POSTGRES_USER: ${DB_USER:-psqladmin}
+    POSTGRES_PASSWORD: ${DB_PASSWORD:-secret}
+    POSTGRES_DB: ${DB_DATABASE:-admin}
 
 services:
     database:
         image: postgres:16-alpine
         environment:
-            TZ: Asia/Kolkata
+            TZ: ${TZ:-UTC}
             <<: *db-creds
         volumes:
             - db_data:/var/lib/postgresql/data
