--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -11,7 +11,7 @@ services:
     database:
         image: postgres:16-alpine
         environment:
-            TZ: ${TZ:-UTC}
+            TZ: Asia/Kolkata
             <<: *db-creds
         volumes:
             - db_data:/var/lib/postgresql/data
